# mcp-shopping-channel

./: .gitignore  DEVELOPING.md  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
src/evolve_o_mart/: __init__.py  models.py  seeds.py  server.py  store.py
src/evolve_o_mart/gemini/: __init__.py  sampling.py
src/evolve_o_mart/storage/: __init__.py  elasticsearch.py
tests/: __init__.py  test_models.py  test_server.py  test_store.py
